--- a/LanguageSchool/Views/Course/List.cshtml
+++ b/LanguageSchool/Views/Course/List.cshtml
@@ -150,7 +150,7 @@
                     @Html.DisplayFor(modelItem => item.Description)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.LanguageProficency.Name)
+                    @Html.DisplayFor(modelItem => item.LanguageProficency.PLName)
                 </td>
                 <td>
                     @item.StartDate.ToString("yyyy/MM/dd")
