--- a/LanguageSchool/Views/LessonSubject/CreateFromExisting.cshtml
+++ b/LanguageSchool/Views/LessonSubject/CreateFromExisting.cshtml
@@ -35,7 +35,7 @@
                                 <td>
                                     @lessonSubject.Description
                                 </td>
-                                <td>
+                                <td style="width:30px">
                                     <button class="btn btn-primary" type="button" onclick="location.href='@Url.Action("Copy", new { lessonSubjectId = lessonSubject.Id, groupId = Model.TeacherGroupId })'">Wybierz</button>
                                 </td>
                             </tr>
