--- a/LanguageSchool/Views/User/Details.cshtml
+++ b/LanguageSchool/Views/User/Details.cshtml
@@ -8,7 +8,7 @@
 <h2>Użytkownik</h2>
 
 <div class="col-xs-12">
-    <h4>@Model.UserData.FirstOrDefault().Name @Model.UserData.FirstOrDefault().Surname</h4>
+    <h4>@Model.UserData.Name @Model.UserData.Surname</h4>
     <hr />
     <div class="col-xs-4">
         <label>
